--- a/1D_DFT/1D_DFT.ipynb
+++ b/1D_DFT/1D_DFT.ipynb
@@ -75,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f7dc6393c70>]"
+       "[<matplotlib.lines.Line2D at 0x7f9835f03c40>]"
       ]
      },
      "execution_count": 2,
@@ -134,6 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@jit\n",
     "def diffOP_first(x):\n",
     "    n_grid_loc = len(x)\n",
     "    h=x[1]-x[0]\n",
@@ -183,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f7dc627eac0>"
+       "<matplotlib.legend.Legend at 0x7f9835ded5e0>"
       ]
      },
      "execution_count": 4,
@@ -309,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f7dc6172130>"
+       "<matplotlib.legend.Legend at 0x7f9835cdb850>"
       ]
      },
      "execution_count": 8,
@@ -352,7 +353,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f7dc60fa4f0>]"
+       "[<matplotlib.lines.Line2D at 0x7f9835c62940>]"
       ]
      },
      "execution_count": 9,
@@ -483,7 +484,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "82 µs ± 42.6 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "74.5 µs ± 23 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -507,7 +508,7 @@
     "        fn = index_update(fn_0, index[-1], 1)\n",
     "    \n",
     "    fnT = fn.reshape((-1,1))\n",
-    "    used_wavefunc = normed_psi.T[0:len(fn), :] #warum muss ich den bums Transponieren \n",
+    "    used_wavefunc = normed_psi.T[0:len(fn), :] \n",
     "    \n",
     "    def dens(orb, wavefunc):\n",
     "        return orb * (wavefunc**2)\n",
@@ -526,9 +527,49 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.02355917 0.09310824 0.2053266  0.35489189 0.53478379 0.73668246\n",
+      " 0.95143652 1.16957164 1.38180836 1.57955766 1.75536456 1.90327387\n",
+      " 2.01909749 2.10056937 2.14738166 2.16110326 2.14498957 2.10369875\n",
+      " 2.04293565 1.96904852 1.88860572 1.80798025 1.73296849 1.66846608\n",
+      " 1.61821961 1.58466668 1.5688708  1.57055083 1.58819825 1.61926996\n",
+      " 1.66043969 1.70788773 1.75760711 1.80570399 1.84867166 1.88362036\n",
+      " 1.90844878 1.92194848 1.92383704 1.91472168 1.89599953 1.86970538\n",
+      " 1.83832088 1.80456131 1.77115702 1.74064602 1.71519274 1.69644519\n",
+      " 1.68543917 1.68255453 1.68752383 1.69949024 1.71710741 1.73867169\n",
+      " 1.76227462 1.78596291 1.80789308 1.82646898 1.8404523  1.84903888\n",
+      " 1.8518965  1.84916334 1.84140916 1.82956436 1.81482427 1.79853771\n",
+      " 1.78208955 1.76678726 1.75376023 1.74387965 1.7377041  1.73545425\n",
+      " 1.73701683 1.74197623 1.74966929 1.75925752 1.76980965 1.78038681\n",
+      " 1.79012298 1.79829389 1.80436923 1.80804431 1.80924969 1.80813909\n",
+      " 1.80505789 1.80049623 1.79503176 1.78926796 1.78377412 1.77903245\n",
+      " 1.7753971  1.7730685  1.77208476 1.77233029 1.77356001 1.77543607\n",
+      " 1.77757301 1.7795862  1.78113866 1.78198107 1.78198107 1.78113866\n",
+      " 1.7795862  1.77757301 1.77543607 1.77356001 1.77233029 1.77208476\n",
+      " 1.7730685  1.7753971  1.77903245 1.78377412 1.78926796 1.79503176\n",
+      " 1.80049623 1.80505789 1.80813909 1.80924969 1.80804431 1.80436923\n",
+      " 1.79829389 1.79012298 1.78038681 1.76980965 1.75925752 1.74966929\n",
+      " 1.74197623 1.73701683 1.73545425 1.7377041  1.74387965 1.75376023\n",
+      " 1.76678726 1.78208955 1.79853771 1.81482427 1.82956436 1.84140916\n",
+      " 1.84916334 1.8518965  1.84903888 1.8404523  1.82646898 1.80789308\n",
+      " 1.78596291 1.76227462 1.73867169 1.71710741 1.69949024 1.68752383\n",
+      " 1.68255453 1.68543917 1.69644519 1.71519274 1.74064602 1.77115702\n",
+      " 1.80456131 1.83832088 1.86970538 1.89599953 1.91472168 1.92383704\n",
+      " 1.92194848 1.90844878 1.88362036 1.84867166 1.80570399 1.75760711\n",
+      " 1.70788773 1.66043969 1.61926996 1.58819825 1.57055083 1.5688708\n",
+      " 1.58466668 1.61821961 1.66846608 1.73296849 1.80798025 1.88860572\n",
+      " 1.96904852 2.04293565 2.10369875 2.14498957 2.16110326 2.14738166\n",
+      " 2.10056937 2.01909749 1.90327387 1.75536456 1.57955766 1.38180836\n",
+      " 1.16957164 0.95143652 0.73668246 0.53478379 0.35489189 0.2053266\n",
+      " 0.09310824 0.02355917]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f7dc60daaf0>"
+       "<matplotlib.legend.Legend at 0x7f9835c15250>"
       ]
      },
      "execution_count": 15,
@@ -549,6 +590,7 @@
     }
    ],
    "source": [
+    "print(density(num_electrons,psi_non_e, x))\n",
     "plt.plot(density(num_electrons,psi_non_e, x), label=\"non\")\n",
     "plt.plot(density(num_electrons,psi_harm, x), label=\"harm\")\n",
     "plt.plot(density(num_electrons,psi_well, x), label=\"well\")\n",
@@ -675,14 +717,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 0     energy: 0.7069     energy_diff: -14.0391625028\n",
+      "step: 0     energy: 0.7069     energy_diff: -inf\n",
       "step: 1     energy: 16.3625    energy_diff: 15.6555321919\n",
       "step: 2     energy: 13.8021    energy_diff: -2.5603559494\n",
       "step: 3     energy: 15.3002    energy_diff: 1.4980525863\n",
@@ -740,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -771,16 +813,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f7dc5e8a8e0>"
+       "<matplotlib.legend.Legend at 0x7f9835c01d60>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -818,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
